--- a/Shop/views/layout/navigation.ejs
+++ b/Shop/views/layout/navigation.ejs
@@ -1,12 +1,10 @@
 <header class="main-header">
     <nav>
-        <label class="logo">E-Commerce</label>
         <ul>
-          <li><a class="active" href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Feedback</a></li>
+          <li><a href="/shop">Shop</a></li>
+          <li><a href="/shop/cart">Cart</a></li>
+          <li><a href="/shop/addProduct">AddProduct</a></li>
+          <li><a href="/auth/signin">Login</a></li>
         </ul>
       </nav>
 </header>
