--- a/Shop/public/css/nav.css
+++ b/Shop/public/css/nav.css
@@ -2,4 +2,27 @@
     width: 100%;
     background-color: blue;
 }
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
   
+nav li {
+    float: left;
+}
+  
+nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+  
+nav ul li a:hover {
+    background-color: #111;
+}
