--- a/Shop/public/css/shop/shop.css
+++ b/Shop/public/css/shop/shop.css
@@ -14,7 +14,8 @@
     flex-direction: column;
     padding: 10px;
     width: 20%;
-    height: auto;
+    height: 65vh;
+    background-color: white;
     border: transparent;
     border-radius: 1rem;
     box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.1);}
@@ -25,11 +26,13 @@
     align-items: center;
     flex-direction: column;
     margin: 5px 0px;
+    height: 75%;
 }
 
 .card .body img{
     width: 85%;
     height: 85%;
+    margin: 5px;
 }
 
 .head{
@@ -73,24 +76,5 @@
     align-items: center;
     width: 85%;
 }
-
-.foot button{
-    background-image: linear-gradient(to right, #1FA2FF 0%, #12D8FA  51%, #1FA2FF  100%);
-    margin: 5px;
-    padding: 10px 10px;
-    text-align: center;
-    transition: 0.5s;
-    background-size: 200% auto;
-    color: white;            
-    box-shadow: 0 0 20px #eee;
-    border-radius: 10px;
-    border: none;
-}
-
-.foot button:hover{
-    background-position: right center; /* change the direction of the change here */
-    color: #fff;
-    text-decoration: none;
-}
-         
+    
  
