--- a/Shop/views/shop/index.ejs
+++ b/Shop/views/shop/index.ejs
@@ -1,9 +1,9 @@
-<%- include('layout/head.ejs') %>
-    <link rel="stylesheet" href="/css/shop.css">
+<%- include('../layout/head.ejs') %>
+    <link rel="stylesheet" href="/css/shop/shop.css">
 </head>
 
 <body>
-    <%- include('layout/navigation.ejs') %>
+    <%- include('../layout/navigation.ejs') %>
 
     <main>
         <% if(products.length > 0) { %>
@@ -14,7 +14,7 @@
                             <p><%= product.name %></p>
                         </div>
                         <div class="body">
-                            <img src="/images/<%= product.img %>" alt="<%= product.name %>">
+                            <img src="/images/<%= product.image %>" alt="<%= product.name %>">
                             <div class="description">
                                 <p class="price"><%= product.price %>$</p>
                                 <p><%= product.description %></p>
@@ -31,4 +31,4 @@
             <h1>No Products Found</h1>
         <% } %>
     </main>
-<%- include('layout/end.ejs') %>
+<%- include('../layout/end.ejs') %>
