--- a/Shop/views/shop/addProduct.ejs
+++ b/Shop/views/shop/addProduct.ejs
@@ -1,6 +1,5 @@
 <%- include('../layout/head.ejs') %>
     <link rel="stylesheet" href="/css/shop/addProduct.css">
-    <script type="text/javascript" src="/js/shop/addProduct.js"></script>
 </head>
 
 <body>
@@ -9,12 +8,10 @@
     <main>
         <div class="container">
             <form method="POST" action="/shop/addProduct">
+                <div class="form-title">
+                    <h2>Add New Product</h3>
+                </div>
                 <div class="form-container">
-                    <div class="left-container">
-                        <input id="file" type="file" onchange="test(event)" download/>
-                        <img id="img" />
-                    </div>
-                    <div class="right-container">
                         <div id="name">
                             <label for="name"> Nom de l'article :</label>
                             <input name="name" type="text"/>
@@ -24,11 +21,14 @@
                             <span id="euro"><input name="price" type="text"/>€</span> 
                         </div>
                         <div id="desc">
-                            <label for="name"> Description :</label>
-                            <input name="name" type="text"/>
+                            <label for="desc"> Description :</label>
+                            <input name="desc" type="text"/>
+                        </div>
+                        <div id="image">
+                            <label for="image"> Image :</label>
+                            <input name="image" type="text"/>
                         </div>
                         <button type="submit">Add New Product</button>
-                    </div>
                 </div>
             </form>
         </div>    
