--- a/Shop/public/css/shop/addProduct.css
+++ b/Shop/public/css/shop/addProduct.css
@@ -7,36 +7,36 @@
 
 .form-container {
     background-color: white;
-    width: 80vw;
-    height: 80vh;
+    min-width: 40vw;
+    min-height: 60vh;
     border: transparent;
     border-radius: 1rem;
     box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.1);
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
-
-.left-container,
-.right-container {
-    width: 45%;
-    height: 70vh;
-    border: black 2px solid;
-    display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    padding: 10px;
+    padding : 10px 20px;
 }
 
-.right-container input{
+.form-title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.form-container input{
     height: 30px;
     margin: 10px 20px;
     border-radius: 1rem;
     border: 1px solid rgb(185, 188, 188);
     box-shadow: 0px 10px 20px 5px rgba(0,0,0,0.1);
+    font-size: 1.2em;
 }
 
-.right-container div {
+.form-container div {
+    min-width: 80%;
     display: flex;
     flex-direction: column;
 }
@@ -44,7 +44,6 @@
 #euro{
     display: flex;
     align-items: center;
-    font-size: 30px
 }
 
 #euro input{
