--- a/Shop/views/signin.ejs
+++ b/Shop/views/signin.ejs
@@ -1,10 +1,15 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site E-commerce</title>
+<%- include('./layout/head.ejs') %>
+    <link rel="stylesheet" href="/css/signin.css">
 </head>
+
 <body>
-    <h1>Login toi batard</h1>
-</body>
-</html>
+    <%- include('./layout/navigation.ejs') %>
+
+    <div>
+        <h1>Non non non !</h1>
+        <h3>Vous ne pouvez pas encore vous connecter</h3>
+        <h5>revenez plus tard dans quelque mois ou quelque année peut être</h5>
+        <p>ou même des decennies</p>
+    </div>
+
+<%- include('./layout/end.ejs') %>
